# nabr

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  PHASE_2A_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  create_tables.py  docker-compose.yml  main.py  pyproject.toml
.github/: AI_DEVELOPMENT_GUIDE.md  copilot_instructions.md  temporal_guide.md
alembic/: env.py
alembic/versions/: 61358bb5b352_restructure_user_types_and_profiles.py  6e9429e95787_initial_migration_users_requests_.py  8a7f3c9d4e21_add_tiered_verification_models.py
docker/backend/: Dockerfile
docker/postgres/: init.sql
docker/temporal/dynamicconfig/: development-sql.yaml
docker/worker/: Dockerfile
docs/: AUTHENTICATION_SYSTEM.md  CHANGELOG.md  DEVELOPMENT.md  FIXES_2025-10-02.md  PROGRESSIVE_VERIFICATION_SYSTEM.md  PROJECT_STATUS.md  README.md  README_NEW.md  README_OLD.md  TEMPORAL_VERIFICATION_IMPLEMENTATION.md  UI_COMPONENTS_SPEC.py  VERIFICATION_CHANGE_SUMMARY.md  VERIFICATION_SYSTEM.md  VERIFICATION_WORKFLOWS.md
scripts/: README.md  shutdown.sh  startup.sh
src/nabr/: __init__.py  main.py
src/nabr/core/: config.py  security.py
src/nabr/db/: __init__.py  session.py
src/nabr/models/: __init__.py  auth_methods.py  request.py  review.py  user.py  verification.py  verification_types.py
src/nabr/schemas/: __init__.py  auth.py  base.py  request.py  review.py  user.py  verification.py
src/nabr/temporal/: README.md  (+3 more)
tests/integration/: test_database.py  test_verification_activities.py
tests/unit/: test_verification_types.py
(+37 files in other folders)
